Создали API Решателей

--- a/Solver/Solver.vcxproj
+++ b/Solver/Solver.vcxproj
@@ -82,9 +82,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <Lib>
-      <TreatLibWarningAsErrors>true</TreatLibWarningAsErrors>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -115,9 +112,6 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <Lib>
-      <TreatLibWarningAsErrors>true</TreatLibWarningAsErrors>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -137,10 +131,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="math_helper.cpp" />
+    <ClInclude Include="RiemannSumAverage.h" />
+    <ClInclude Include="RiemannSumLeft.h" />
+    <ClInclude Include="RiemannSumRight.h" />
+    <ClInclude Include="RiemannSumTrapezoid.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="nath_helper.h" />
+    <ClCompile Include="RiemannSumAverage.cpp" />
+    <ClCompile Include="RiemannSumLeft.cpp" />
+    <ClCompile Include="RiemannSumRight.cpp" />
+    <ClCompile Include="RiemannSumTrapezoid.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
