Добавлен класс для сравнения вещественных чисел #1

--- a/Solver/Solver.vcxproj.filters
+++ b/Solver/Solver.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="RiemannSumTrapezoid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MathHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RiemannSumRight.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RiemannSumTrapezoid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MathHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
