--- a/Solver/Solver.vcxproj
+++ b/Solver/Solver.vcxproj
@@ -131,12 +131,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MathHelper.h" />
     <ClInclude Include="RiemannSumAverage.h" />
     <ClInclude Include="RiemannSumLeft.h" />
     <ClInclude Include="RiemannSumRight.h" />
     <ClInclude Include="RiemannSumTrapezoid.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MathHelper.cpp" />
     <ClCompile Include="RiemannSumAverage.cpp" />
     <ClCompile Include="RiemannSumLeft.cpp" />
     <ClCompile Include="RiemannSumRight.cpp" />
