Написаны тесты к классу метод левых прмоуголников

--- a/Solver.Tests/Solver.Tests.vcxproj
+++ b/Solver.Tests/Solver.Tests.vcxproj
@@ -164,7 +164,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Solver.Tests.cpp" />
+    <ClCompile Include="RiemannSumLeft.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Solver\Solver.vcxproj">
