--- a/Solver.Tests/Solver.Tests.vcxproj.filters
+++ b/Solver.Tests/Solver.Tests.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Solver.Tests.cpp">
+    <ClCompile Include="RiemannSumLeft.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
